@@ -52,10 +52,10 @@ macx {
     ICON = data/vmpk.icns
     DEFINES += __MACOSX_CORE__
     BUNDLE_RES.files = data/help.html \
-        data/help_de.html \
+#        data/help_de.html \
         data/help_es.html \
         data/help_ru.html \
-        data/help_tr.html \
+#        data/help_tr.html \
         data/gmgsxg.ins \
         data/spanish.xml \
         data/german.xml \
@@ -64,11 +64,11 @@ macx {
         data/vkeybd-default.xml \
         data/pc102mac.xml \
         $$DESTDIR/translations/vmpk_cs.qm \
-        $$DESTDIR/translations/vmpk_de.qm \
+#        $$DESTDIR/translations/vmpk_de.qm \
         $$DESTDIR/translations/vmpk_es.qm \
-        $$DESTDIR/translations/vmpk_fr.qm \
+#        $$DESTDIR/translations/vmpk_fr.qm \
         $$DESTDIR/translations/vmpk_ru.qm \
-        $$DESTDIR/translations/vmpk_tr.qm \
+#        $$DESTDIR/translations/vmpk_tr.qm \
         $$DESTDIR/translations/vmpk_zh_CN.qm
     BUNDLE_RES.path = Contents/Resources
     QMAKE_BUNDLE_DATA += BUNDLE_RES
@@ -151,12 +151,13 @@ SOURCES += src/about.cpp \
 
 RESOURCES += data/vmpk.qrc
 
+# unmaintained translations, not distributed
 TRANSLATIONS +=  translations/vmpk_cs.ts \
-    translations/vmpk_de.ts \
+# translations/vmpk_de.ts \
+# translations/vmpk_fr.ts \
+# translations/vmpk_tr.ts \
     translations/vmpk_es.ts \
-    translations/vmpk_fr.ts \
     translations/vmpk_ru.ts \
-    translations/vmpk_tr.ts \
     translations/vmpk_zh_CN.ts
 
 include(updateqm.pri)
